# Student-Management-System-In-Django

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  firebase-key.json  firebase-key.json.example  pyproject.toml  requirements.txt  todo.md
.github/: dependabot.yml
.github/workflows/: django.yml
app/: admin (copy 1).py  admin.py  adminViews.py  admissionviews.py  apps.py  auth.py  backends.py  error_handlers.py  firebase.py  forms.py  hodviews.py  middleware.py  models.py  parentviews.py  routers.py  serializers.py  signals.py  staffviews.py  studentViews.py  studentviews.py  teacherViews.py  tests.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_alter_staff_phone_alter_student_father_phone_no_and_more.py  0002_alter_studentfeedback_unique_together_and_more.py  0002_create_staffinstitutefeedback_table.py  0002_remove_attendancereport_status.py  0002_rename_author_library_publication.py  0002_rename_specialization_teacher_specialization_on_and_more.py  0002_staff_user_student_user_teacher_user.py  0003_academicyear_course_subject.py  0003_alter_certificate_options_and_more.py  0003_alter_course_level_alter_staff_position_and_more.py  (+59 more)
main/: admin.py  models.py
static/: firebase-messaging-sw.example.js  firebase-messaging-sw.js
student_management_system/: config.py  jazzmin.py  settings.py  urls.py  wsgi.py
templates/: 400.html  403.html  404.html  500.html  505.html  base.html  dashboard.html  marksheet.html  student_dashboard.html  studentdashboard.html  subject_files.html  teacher_attendance.html  teacher_dashboard.html
(+144 files in other folders)
